# lambda_layer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
example/: layer_config.json
scripts/: lint.sh
src/: main.py  utils.py
src/managers/: lambda_function.py
src/models/: layer_config.py
