[tool.poetry]
name = "lambda-layer"
version = "0.1.0"
description = ""
authors = ["MMartin09 <mmartin09@outlook.at>"]
readme = "README.md"
packages = [{include = "lambda_layer"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"
boto3 = "^1.26.98"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.263"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
